[package]
name = "nft-factory-pallet"
description = "Galital NFT pallet, forked and modified from chiba pallet"
license = "Apache-2.0"
version = "0.4.0-dev"
authors = ["Usetech <hello@usetech.com>, Joshua Mir <https://github.com/joshua-mir>, Dan Forbes <dan@danforbes.dev>, Masterdubs <contact@masterdubs.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.123", default-features = false }

# Substrate core dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# FRAME dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# nft dependencies
pallet-atomic-swap = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
orml-nft = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "master", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-atomic-swap/std",
	"orml-nft/std",
	"orml-traits/std",
]
runtime-benchmarks = ["frame-benchmarking"]
